fix image alignment with jumbotron

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+.jumbotron {
+  height: 200px;
+}
+
 p:first-child{
   font-weight: bold;
   font-size: 115%;
@@ -8,5 +12,4 @@ img {
   height: 200px;
   margin: 0px;
   padding: 0px;
-  border: 0px;
-}
+  }
